--- a/Resources/Styles/Colors.xaml
+++ b/Resources/Styles/Colors.xaml
@@ -28,12 +28,12 @@
     <Color x:Key="Gray900">#212121</Color>
     <Color x:Key="Gray950">#141414</Color>
 
-    <!--<Color x:Key="ColorPrimario">#0078D4</Color>
+    <Color x:Key="ColorPrimario">#0078D4</Color>
     <Color x:Key="ColorSecundario">#00C896</Color>
     <Color x:Key="GrisOscuro">#2D2D2D</Color>
     <Color x:Key="FondoClaro">#FFFFFF</Color>
     <Color x:Key="TextoPrincipal">#1E1E1E</Color>
-    <Color x:Key="Advertencia">#E53935</Color>-->
+    <Color x:Key="Advertencia">#E53935</Color>
 
     <SolidColorBrush x:Key="PrimaryBrush" Color="{StaticResource Primary}"/>
     <SolidColorBrush x:Key="SecondaryBrush" Color="{StaticResource Secondary}"/>
